--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ text-align: center;
 
 <h1>Downloads</h1><br><br>
 
-<a href="./movies/Ludo.html" target=”_blank” >Ludo 2020</a><br><br>
+<a href="./movies/Aladdin.html" target=”_blank” >Aladdin (2020)</a><br><br>
+<a href="./movies/Ludo.html" target=”_blank” >Ludo (2020)</a><br><br>
 <a href="./carryminati/the_time_we_transform.html" target=”_blank” >CarryMinati | The Time We Transform</a><br><br>
 
 </body>
