--- a/layout.html
+++ b/layout.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> | Downloads | Subtitle Portal</title>
+<title>title | Downloads | Subtitle Portal</title>
 <link rel="icon" type="image/icon" href="https://subtitleportal.ml/images/favicon.ico" />
 <style>
 .text {
 text-align: center;
 }
+.embed-container { 
+position: relative; 
+padding-bottom: 56.25%; 
+height: 0; overflow: 
+hidden; max-width: 100%;
+}
+.embed-container iframe, 
+.embed-container object, 
+.embed-container embed {
+position: absolute;
+top: 0; left: 0; width: 100%; height: 100%;
 </style>
 </head>
 
@@ -14,11 +25,9 @@ text-align: center;
   
 <h1>YouTube</h1><br>
   
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, 
-.embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe 
-src='' frameborder='0' allowfullscreen></iframe></div>
-
-<h1>Download Links</h1><br>
+<div class='embed-container'><iframe src='92' frameborder='0' allowfullscreen></iframe></div>
+<br>
+<h1>Download Links</h1>
 
 <a href="91" target=”_blank” >91</a><br><br>
   
