--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@ text-align: center;
 
 <h1>Downloads</h1><br><br>
 
-<a href="./Ashish%20Chanchlani/If%202020%20Was%20A%20Person.html" target=”_blank” >If 2020 Was A Person (2020)</a><br><br>
-<a href="./movies/Aladdin.html" target=”_blank” >Aladdin (2020)</a><br><br>
-<a href="./movies/Ludo.html" target=”_blank” >Ludo (2020)</a><br><br>
-<a href="./carryminati/the_time_we_transform.html" target=”_blank” >CarryMinati | The Time We Transform</a><br><br>
+<a href="https://dood.so/f/sz2o70l6uc" target=”_blank” >Movies</a><br><br>
+<a href="https://dood.so/f/s8p53ua6tk" target=”_blank” >Porn</a><br><br>
+<a href="https://dood.so/f/14w3k3ixux" target=”_blank” >Web-Series</a><br><br>
 
 </body>
 </html>
