--- a/index.html
+++ b/index.html
@@ -1,38 +1,7 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-<title>Downloads | Subtitle Portal</title>
-<link rel="icon" type="image/icon" href="https://subtitleportal.ml/images/favicon.ico" />
-<style>
-.text {
-text-align: center;
-}
-/* Tablet Landscape */
-@media screen and (max-width: 1060px) {
-    #primary { width:67%; }
-    #secondary { width:30%; margin-left:3%;}  
-}
-
-/* Tabled Portrait */
-@media screen and (max-width: 768px) {
-    #primary { width:100%; }
-    #secondary { width:100%; margin:0; border:none; }
-}
-</style>
-
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="HandheldFriendly" content="true">
-
-</head>
-
-<body class="text">
-
-<h1>Downloads</h1><br><br>
-
-<a href="https://dood.so/f/sz2o70l6uc" target=”_blank” >Movies</a><br><br>
-<a href="https://dood.so/f/s8p53ua6tk" target=”_blank” >Porn</a><br><br>
-<a href="https://dood.so/f/14w3k3ixux" target=”_blank” >Web-Series</a><br><br>
-
+<body>
+<meta http-equiv="refresh" content="0; URL=https://subtitleportal.ml/" />
 </body>
 </html>
